firebase link changed

--- a/src/components/ClothUpload/ClothUpload.css
+++ b/src/components/ClothUpload/ClothUpload.css
@@ -1,14 +1,4 @@
-
-.breadcrumb {
-    background-color: transparent;
-    
-  }
-  
-  
-  .breadcrumb .active {
-    color: #F0A500;
-  }
-  .white-text {
-    color: red;
-  }
-  
+.btns {
+  display: flex;
+  justify-content: space-between;
+}
