--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -17,8 +17,8 @@
   padding: 40px;
   border-radius: 20px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-  background-color: #000;
   color: #fff;
+  background-color: #1f1f1f;
   border: 1px solid #ebcc028c;
   transition: all 0.3s ease-in-out;
 }
@@ -49,7 +49,7 @@ input {
 }
 
 input::placeholder {
-  color: #ccc;
+  color: #a1bbce;
 }
 
 input:focus {
