--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,8 @@
 }
 
 .navbar-content {
+  height: 3rem;
+  align-items: center;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -36,6 +38,7 @@
   display: flex;
   align-items: center;
   gap: 2rem;
+  margin-top: 1rem;
 }
 
 .nav-menu li {
@@ -92,6 +95,7 @@
   font-weight: bold;
   cursor: pointer;
   transition: background 0.3s ease;
+  margin-bottom: 1rem;
 }
 
 .logout-btn:hover {
